5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1674_1100.log
== TEST (2019-04-25 10:24:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("valor da cedula: "))
print("Entrada: ",x)
elif (x=2):
	print("Tartaruga")
elif (x=5):
	print("Garça")
elif (x=10):
	print("Arara")
elif (x=20):
	print("Mico-leao-dourado")
elif (x=50):
	print("Onça-pintada")
elif (x=100):
	print("Garoupa")


-- ERROR:
File "XXXX", line 6
    elif (x=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:25:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("valor da cedula: "))
print("Entrada: ",x)
elif (x=2):
	print("Tartaruga")
	elif (x=5):
	print("Garça")
		elif (x=10):
	print("Arara")
			elif (x=20):
	print("Mico-leao-dourado")
				elif (x=50):
	print("Onça-pintada")
					elif (x=100):
	print("Garoupa")


-- ERROR:
File "XXXX", line 6
    elif (x=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:25:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("valor da cedula: "))
print("Entrada: ",x)
elif (x=2):
	print("Tartaruga")
	elif (x=5):
	print("Garça")
		elif (x=10):
	print("Arara")
			elif (x=20):
	print("Mico-leao-dourado")
				elif (x=50):
	print("Onça-pintada")
					elif (x=100):
	print("Garoupa")


-- ERROR:
File "XXXX", line 6
    elif (x=2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:25:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
x= int(input("valor da cedula: "))
print("Entrada: ",x)
if (x=2):
	print("Tartaruga")
	elif (x=5):
	print("Garça")
		elif (x=10):
	print("Arara")
			elif (x=20):
	print("Mico-leao-dourado")
				elif (x=50):
	print("Onça-pintada")
					elif (x=100):
	print("Garoupa")


-- ERROR:
File "XXXX", line 6
    if (x=2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:30:01) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)

if(x==2):
	print("Tartaruga")
elif (x==5):
	print("Garça")
elif (x==10):
	print("Arara")
elif (x==20):
	print("Mico-leao-dourado")
elif (x==50):
	print("Onça-pintada")
elif(x==100):
	print("Garoupa")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:30:18) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)

if(x==2):
	print("Tartaruga")
elif (x==5):
	print("Garca")
elif (x==10):
	print("Arara")
elif (x==20):
	print("Mico-leao-dourado")
elif (x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:30:24) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)

if(x==2):
	print("Tartaruga")
elif (x==5):
	print("Garca")
elif (x==10):
	print("Arara")
elif (x==20):
	print("Mico-leao-dourado")
elif (x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
-- EXECUTION TIME:
0.226416
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:30:59) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)

if(x==2):
	print("Tartaruga")
elif (x==5):
	print("Garca")
elif (x==10):
	print("Arara")
elif (x==20):
	print("Mico-leao-dourado")
elif (x==50):
	print("Onca-pintada")
elif(x==100):
	print("Garoupa")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:31:31) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)

if(x==2):
	print("Animal: Tartaruga")
elif (x==5):
	print("Animal: Garca")
elif (x==10):
	print("Animal: Arara")
elif (x==20):
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
-- EXECUTION TIME:
0.137089
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:31:32) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)

if(x==2):
	print("Animal: Tartaruga")
elif (x==5):
	print("Animal: Garca")
elif (x==10):
	print("Animal: Arara")
elif (x==20):
	print("Animal: Mico-leao-dourado")
elif (x==50):
	print("Animal: Onca-pintada")
elif(x==100):
	print("Animal: Garoupa")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:38:00) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	print("Animal",y)
elif (x==5):
	print("Animal",y2)
elif (x==10):
	print("Animal",y3)
elif (x==20):
	print("Animal",y4)
elif (x==50):
	print("Animal",y5)
elif(x==100):
	print("Animal",y6)
-- EXECUTION TIME:
0.151301
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:00) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	print("Animal",y)
elif (x==5):
	print("Animal",y2)
elif (x==10):
	print("Animal",y3)
elif (x==20):
	print("Animal",y4)
elif (x==50):
	print("Animal",y5)
elif(x==100):
	print("Animal",y6)
-- OUTPUT:
Entrada: 100
Animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:38:19) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	print("Animal:",y)
elif (x==5):
	print("Animal:",y2)
elif (x==10):
	print("Animal:",y3)
elif (x==20):
	print("Animal:",y4)
elif (x==50):
	print("Animal:",y5)
elif(x==100):
	print("Animal:",y6)
-- EXECUTION TIME:
0.13893
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:19) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	print("Animal:",y)
elif (x==5):
	print("Animal:",y2)
elif (x==10):
	print("Animal:",y3)
elif (x==20):
	print("Animal:",y4)
elif (x==50):
	print("Animal:",y5)
elif(x==100):
	print("Animal:",y6)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:38:29) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	print("Animal:",y)
elif (x==5):
	print("Animal:",y2)
elif (x==10):
	print("Animal:",y3)
elif (x==20):
	print("Animal:",y4)
elif (x==50):
	print("Animal:",y5)
elif(x==100):
	print("Animal:",y6)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:41:28) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
elif(x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:41:33) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
elif(x==100):
	animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.162604
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:42:41) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
elif(x==100):
	animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.134164
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:44:16) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
elif(x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:46:04) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
else:
	animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.137603
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Garoupa
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:46:05) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
else:
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:46:17) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
else:
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:46:38) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.171224
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:46:39) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:48:06) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	animal: "invalido"
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:48:43) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.163552
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 9
    elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:49:07) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 9
    elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:49:13) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:49:39) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:49:59) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:50:35) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.141944
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Invalido
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:50:42) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:17) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:51:35) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
if (x==100):
	animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 10
    elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:02) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:05) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 10:52:06) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- EXECUTION TIME:
0.126322
-- ERROR:
  File "/home/codebench/codes/1674/1100/main.py", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:07) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:52:09) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:53:25) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:19) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
	if (x==100):
		animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:58:43) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
	if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 10
    elif(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 10:59:00) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
	if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:05) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")

elif(x==2):
	animal=y
elif (x==5):
	animal=y2
elif (x==10):
	animal=y3
elif (x==20):
	animal=y4
elif (x==50):
	animal=y5
	if (x==100):
		animal=y6
	
print("Animal:",animal)
-- OUTPUT:
Entrada: 100
Animal: Invalido
Animal: Tartaruga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:38) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:01:41) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)
y="Tartaruga"
y2="Garca"
y3="Arara"
y4="Mico-leao-dourado"
y5="Onca-pintada"
y6="Garoupa"
animal= y or y2 or y3 or y4 or y6 or y5
if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	print("Animal: Invalido")
else:
	elif(x==2):
	animal=y
	elif (x==5):
	animal=y2
	elif (x==10):
	animal=y3
	elif (x==20):
	animal=y4
	elif (x==50):
	animal=y5
		if (x==100):
		animal=y6
	
print("Animal:",animal)
-- ERROR:
File "XXXX", line 13
    elif(x==2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:07:56) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	y= "invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:24) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 or x!=5 or x!=10 or x!=20 or x!=50 or x!=100):
	y= "invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:08:53) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:08:58) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- EXECUTION TIME:
0.174479
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:03) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:09:10) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "Invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- EXECUTION TIME:
0.151493
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
valor da cedula: Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
valor da cedula: Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
valor da cedula: Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:12) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "Invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:27) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "Invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garça"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:09:47) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "Invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:10:10) 
-- CODE:
x= int(input("valor da cedula: "))
print("Entrada:",x)


if(x!=2 and x!=5 and x!=10 and x!=20 and x!=50 and x!=100):
	y= "Invalido"
elif(x==2):
	y= "Tartaruga"
elif (x==5):
	y= "Garca"
elif (x==10):
	y= "Arara"
elif (x==20):
	y= "Mico-leao-dourado"
elif (x==50):
	y= "Onca-pintada"
elif (x==100):
	y= "Garoupa"
	
print("Animal:",y)
-- EXECUTION TIME:
0.143496
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
